Add kernel hyperparameters and example notebook.

--- a/.gitignore
+++ b/.gitignore
@@ -49,5 +49,7 @@ MANIFEST
 # Per-project virtualenvs
 .venv*/
 
-# debugging iPython scripts in root directory
+# debugging iPython scripts and figures in root directory
 /*.ipy
+/*.pdf
+
